# AXL

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  README.md  buildme_deps
.github/workflows/: build-and-test.yml  release.yml
cmake/: AXL_ADD_TEST.cmake  FindKVTREE.cmake  FindNNFDM.cmake  axlConfig.cmake.in  config.h.in
doc/: README.md  file_lists.md
src/: CMakeLists.txt  axl.c  axl.h  axl_async.c  axl_async_bbapi.c  axl_async_bbapi.h  axl_async_cppr.c  axl_async_cppr.h  axl_async_daemon.c  axl_async_daemon.h  axl_async_daemon_keys.h  axl_async_datawarp.c  axl_async_datawarp.h  axl_async_nnfdm.c  axl_async_nnfdm.h  axl_cppr.c  axl_cppr.h  axl_daemon.c  axl_err.c  axl_flush.c  axl_flush_async_bbapi.c  axl_flush_file.c  axl_flush_file.h  axl_internal.h  axl_io.c  axl_keys.h  axl_mpi.c  axl_mpi.h  axl_pthread.c  axl_pthread.h  axl_service.h  axl_service_client.c  axl_service_server.c  axl_socket.c  axl_socket.h  axl_socket_daemon.c  axl_svc.h  axl_svc_client.c  axl_svc_server.c  axl_sync.c  (+6 more)
test/: CMakeLists.txt  axl_cp.c  axl_mpi_cp.c  axl_svc_test.c  axl_test_nnfdm.cpp  test_axl.c  test_axl.h  test_axl.sh  test_axl_async_daemon.c  test_axl_async_daemon.h  test_axl_async_ibmbb.c  test_axl_async_ibmbb.h  test_axl_metadata.sh  test_axl_sync.c  test_axl_sync.h  test_client_server.c  test_config.c  test_driver_client_server.py
test/nnf/axl.containers/: Dockerfile  axl-container-haridev.yaml  axl-container-hetchy.yaml  axl-container-marty.yaml  axl-container-martymcf.yaml  axl-container-stanavig.yaml  axl-container-tioga.yaml
test/nnf/axl.containers/src/: mpi_hello_world.c
test/nnf/hetchy.container/: nnf-container-example.yaml  run_nnf_user_container
test/nnf/hpe_demo.container/: Dockerfile  allocation-computes.yaml  allocation-servers.yaml  nnf-container-example.yaml  run_nnf_user_container
test/nnf/hpe_demo.container/src/: mpi_hello_world.c
